--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
     "short_name": "Mikaels Panda",
     "theme_color": "#4f4f4f",
     "background_color": "#ffffff",
-    "display": "browser",
+    "display": "standalone",
     "scope": "/",
     "start_url": "/",
   "icons": [
